// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Adaptateur de Restitution > génère la restitution avec annexe 1`] = `
[
  {
    "corps": "{"dateCreation":"2023-02-04T09:30:00.000Z","dateDerniereModification":"2023-02-05T09:30:00.000Z","secteurActivite":"Administration","secteurGeographique":"Bretagne, Finistère"}",
    "entete": "",
    "piedPage": "",
  },
  {
    "corps": "{"thematique":"thematique","indicateur":{"moyennePonderee":0}}",
    "entete": "entete indicateur",
    "piedPage": "piedPage indicateur",
  },
  {
    "corps": "{"titre":"mesure 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}{"titre":"mesure 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}{"titre":"mesure 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}{"titre":"mesure 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}{"titre":"mesure 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}{"titre":"mesure 2","pourquoi":"parce-que","comment":"comme ça","priorisation":2,"valeurObtenue":0}",
    "entete": "entete",
    "piedPage": "piedPage",
  },
  {},
  {},
  {
    "corps": "{"titre":"mesure 1","pourquoi":"parce-que","comment":"comme ça","priorisation":3,"valeurObtenue":0}",
    "entete": "entete",
    "piedPage": "piedPage",
  },
]
`;

exports[`Adaptateur de Restitution > génère la restitution sans annexe 1`] = `
[
  {
    "corps": "{"dateCreation":"2023-02-04T09:30:00.000Z","dateDerniereModification":"2023-02-05T09:30:00.000Z","secteurActivite":"Loisir","secteurGeographique":"Ile de France, Paris"}",
    "entete": "",
    "piedPage": "",
  },
  {
    "corps": "{"thematique":"thematique","indicateur":{"moyennePonderee":0}}",
    "entete": "entete indicateur",
    "piedPage": "piedPage indicateur",
  },
  {
    "corps": "{"titre":"mesure 1","pourquoi":"parce-que","comment":"comme ça","priorisation":3,"valeurObtenue":0}",
    "entete": "entete",
    "piedPage": "piedPage",
  },
  {},
  {},
]
`;

exports[`Adaptateur de Restitution > génère une restitution en conservant l'ordre des thématiques 1`] = `
[
  {
    "corps": "{"dateCreation":"2023-02-04T09:30:00.000Z","dateDerniereModification":"2023-02-05T09:30:00.000Z","secteurActivite":"Administration","secteurGeographique":"Bretagne, Finistère"}",
    "entete": "",
    "piedPage": "",
  },
  {
    "corps": "{"thematique":"gouvernance","indicateur":{"moyennePonderee":2.5}}{"thematique":"SecuriteAcces","indicateur":{"moyennePonderee":2.2}}{"thematique":"securiteposte","indicateur":{"moyennePonderee":3}}{"thematique":"securiteinfrastructure","indicateur":{"moyennePonderee":4}}{"thematique":"sensibilisation","indicateur":{"moyennePonderee":2.5}}{"thematique":"reaction","indicateur":{"moyennePonderee":2}}",
    "entete": "entete indicateur",
    "piedPage": "piedPage indicateur",
  },
  {
    "corps": "",
    "entete": "entete",
    "piedPage": "piedPage",
  },
  {},
  {},
]
`;
